# surv_gemini3n

./: .gitignore  README.md  Technical Writeup.md  pyproject.toml  requirements.txt  urls.txt
app/: APP.md  Dockerfile  README.md  app.py  helpers.py  main.py  requirements.txt
app/routes/: camera.py  root.py
app/templates/: base.html  camera_card.html  camera_status.html  error_div.html  index copy.html  index.html  index_server_side_events.html  offline.html  search.html  search_card.html  technical_writeup.html  text_stream.html
app/templates/components/: camera_card.html
experimental/datasets/data/: anomalies.json
experimental/datasets/notebooks/: EDA.ipynb
experimental/datasets/scripts/: dataloader.py  video_to_frame.py
experimental/evaluation/results/single_frame_test/: 512_Enhanced.json  no_rescale.json  rescale_to_512.json  rescale_to_768.json
experimental/evaluation/scripts/: full_evaluation.json  out_of_the_box_evaluation.py
experimental/models/prompts/gemma2b/: Modelfile
experimental/models/prompts/gemma4b/: Modelfile
experimental/models/scripts/: local_request.py
gemini3n_server/: Running_Locally.md  eval_framework.py  offline_capbs.py  requirements.txt
realtime_inference_job/: Dockerfile  README.md  call_gemma.py  gcs_functions.py  job.py  requirements.txt
vector_search/: embeddings-inference.ipynb  generate_frame_dataset.py  image_embeddings_search.npy  test_faiss.py  test_faiss_euclidean.py  test_faiss_unnormalized.py
