[project]
name = "surv-gemini3n"
version = "0.1.0"
description = "SurvGemini3n - AI-Powered Security Surveillance System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
